# prompt-evaluator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  evaluator.py  main.py  pyproject.toml  report.py  requirements.txt
.github/workflows/: bot-command.yml  ci.yml
app/: evaluator.py  main.py  models.py  report.py
static/: index.html
